# autonomi

./: Cargo.toml  README.md  rustfmt.toml
agents/: demo.toml  recall.toml  research.toml
apps/agent/: Cargo.toml
apps/toolbox/: Cargo.toml
apps/toolbox/src/: lib.rs
crates/autonomi-agent/: Cargo.toml  README.md
crates/autonomi-agent/src/: agent.rs  error.rs  lib.rs  provider.rs
crates/autonomi-agent/src/agents/: mod.rs  research.rs
crates/autonomi-memory/: Cargo.toml  README.md
crates/autonomi-memory/src/: error.rs  handle.rs  lib.rs  persistence.rs  store.rs  types.rs  worker.rs
crates/autonomi-runtime/: Cargo.toml  README.md
crates/autonomi-runtime/src/: agent_loop.rs  error.rs  event.rs  lib.rs  runtime.rs  shared.rs
crates/autonomi-runtime/src/hooks/: hook.rs  memory.rs  mod.rs  tracing.rs
crates/autonomi-tools/: Cargo.toml  README.md
crates/autonomi-tools/examples/: toolbox_client.rs
crates/autonomi-tools/src/: client.rs  error.rs  lib.rs  toolbox.rs
crates/autonomi-tools/src/tools/: http_fetch.rs  mod.rs  process_info.rs  readonly_filesystem.rs
crates/autonomi-utils/: Cargo.toml  README.md
crates/autonomi-utils/src/: lib.rs  timestamp.rs
