[package]
name = "agent"
edition.workspace = true
version.workspace = true

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "recall"
path = "src/bin/recall.rs"

[dependencies]
autonomi-agent   = { workspace = true }
autonomi-memory  = { workspace = true }
autonomi-runtime = { workspace = true }
autonomi-tools   = { workspace = true }

anyhow           = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
rig-core         = { workspace = true }
