[package]
name = "toolbox"
edition.workspace = true
version.workspace = true

[[bin]]
name = "basic-toolbox"
path = "src/bin/basic_toolbox.rs"

[dependencies]
autonomi-tools = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
