[package]
name = "autonomi-memory"
edition.workspace = true
version.workspace = true

[dependencies]
autonomi-utils   = { workspace = true }

rig-core    = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
