[package]
name = "autonomi-runtime"
edition.workspace = true
version.workspace = true

[dependencies]
autonomi-agent = { workspace = true }

arc-swap    = { workspace = true }
rig-core    = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
futures     = { workspace = true }

[features]
default = ["tracing-hook"]
tracing-hook = []
