[package]
name = "autonomi-tools"
edition.workspace = true
version.workspace = true

[[bin]]
name = "toolbox-server"
path = "src/bin/toolbox_server.rs"

[dependencies]
rmcp.workspace = true
rig-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest = { version = "0.13", features = ["rustls"], default-features = false }
hostname = "0.4"
